# scripture

./: .dockerignore  .gitignore  Cargo.toml  README.md  ROADMAP.md  rust-toolchain.toml
.cargo/: config.toml  config.toml.example
config/: README.md
crates/config/local/fleet-lab/: .gitignore  Cargo.toml  README.md
crates/config/local/fleet-lab/crates/scripture-load/: Cargo.toml
crates/config/local/fleet-lab/crates/scripture-load/tests/: inflight_pipeline.rs
crates/config/local/fleet-lab/deploy/fleet-exercise/: README.md
crates/config/local/fleet-lab/deploy/fleet-exercise/config/: README.md
crates/config/local/fleet-lab/deploy/k0s-fleet-lab/: Dockerfile  README.md
crates/config/local/fleet-lab/deploy/k0s-fleet-lab/manifests/: owner-service.yaml  owner.yaml  standby.yaml
crates/config/local/fleet-lab/docs/: two-process-drill.md
crates/protoscripture/: Cargo.toml
crates/protoscripture/src/: lib.rs  main.rs
crates/scripture/: Cargo.toml
crates/scripture-campaign/: Cargo.toml
crates/scripture-campaign/src/: artifacts.rs  composition.rs  coverage.rs  cutover_oracle.rs  kellnr.rs  legacy.rs  lib.rs  lifecycle.rs  main.rs  preflight.rs  producer_identity.rs  profile.rs  raw_lines_client.rs  release_oracle.rs  resilience.rs  run.rs  scenario.rs  scripted_drive.rs  trace_observer.rs
crates/scripture-cli/: Cargo.toml
crates/scripture-cli/examples/: scripture-ha-bootstrap.yaml  scripture-ha-standby.yaml  scripture-local.yaml  scripture-multi-assignment-standby.yaml  scripture-multi-assignment.yaml  scripture-standby.yaml  scripture.yaml
crates/scripture-cli/src/: admin_http.rs  assemble.rs  bootstrap.rs  campaign_faults.rs  config.rs  consume.rs  consume_lab.rs  directory_cmd.rs  doctor.rs  ha_activate.rs  lib.rs  live_accept.rs  main.rs  preflight.rs  produce_lab.rs  promote.rs  replace.rs  safety_accept.rs  scribe.rs  scribe_run.rs  serve.rs  spooled_accept.rs
crates/scripture-cli/tests/: consume_cli.rs
crates/scripture-k8s-authority/: Cargo.toml
crates/scripture-k8s-authority/src/: crd.rs  kube_transport.rs  lib.rs  name.rs  store.rs  transport.rs
crates/scripture-k8s-authority/tests/: store_adapter.rs
crates/scripture-load/: Cargo.toml
crates/scripture-load/src/: lib.rs  main.rs
crates/scripture-load/tests/: bounded_load.rs
crates/scripture-producer/: Cargo.toml
crates/scripture-producer-client/: Cargo.toml
crates/scripture-producer-client/src/: lib.rs
crates/scripture-producer/src/: cell.rs  continuity.rs  file.rs  frame.rs  lib.rs  progress.rs  recovery.rs
crates/scripture-producer/tests/: spool.rs
crates/scripture-producer/tests/support/: fixtures.rs
crates/scripture-runtime/: Cargo.toml
crates/scripture-runtime/src/: assignment_root.rs  authority_bootstrap.rs  authority_gate.rs  blob_reader.rs  blob_rewrite.rs  blob_writer.rs  capability.rs  chunk_blob_store.rs  counting_store.rs  credentials.rs  directory.rs  ha_session.rs  holylog_foundation.rs  ingress.rs  lib.rs  local_file_store.rs  node.rs  object_store.rs  pre_commit_spool.rs  producer_routing.rs  producer_wire.rs  raw_lines.rs  scribe.rs  scribe_lifecycle.rs  shared_blob_sink.rs  status.rs
crates/scripture-runtime/src/node/: activation.rs  handoff.rs  inspect.rs  mod.rs  prelude.rs
crates/scripture-runtime/tests/: active_active_release.rs  blob_rewrite.rs  blob_writer.rs  dataref_serve_path.rs  ha_authority_integration.rs  ingress_canon.rs  malformed_identity.rs  multi_assignment_scribe.rs  one_record_ha_proofs.rs  pre_commit_spool.rs  scribe_rejoin.rs  shared_blob_sink.rs
crates/scripture-service/: Cargo.toml
crates/scripture-service/src/: authority_coordinator.rs  canon_node.rs  canon_owner.rs  canon_route.rs  canon_transition.rs  chunk_service.rs  legacy_journal.rs  lib.rs  line_runtime.rs  reconcile.rs  runtime_observation.rs  scripture_node.rs  serving_authority_store.rs  verse_runtime.rs  virtuallog_test_support.rs
crates/scripture-telemetry-producer/: Cargo.toml
crates/scripture-telemetry-producer/src/: buffer.rs  client.rs  config.rs  envelope.rs  ledger.rs  lib.rs  main.rs  normalize.rs  pipeline.rs  runner.rs  scrape.rs
crates/scripture-telemetry-producer/tests/: fake_scribe.rs  promotion_ab.rs
crates/scripture-workload/: Cargo.toml  ICEBERG_FEASIBILITY.md  README.md
crates/scripture-workload/examples/: workloads.example.yaml
crates/scripture-workload/src/: canon_source.rs  config.rs  evidence_bundle.rs  host.rs  lib.rs  parquet_summary.rs  progress.rs  progress_object_store.rs  types.rs  workload.rs
crates/scripture-workload/src/materializer/: json_arrow_parquet.rs  mod.rs
crates/scripture-workload/tests/: contract_memory.rs  telemetry_vertical.rs
crates/scripture/src/: batch.rs  blob_sink.rs  blob_store.rs  canon.rs  chunk.rs  chunklog.rs  clock.rs  dataref.rs  driver.rs  journal.rs  lib.rs  model.rs  producer_outbox.rs  producer_wire.rs  receipt.rs  root_authority.rs  sequencer_key.rs  serving_authority.rs  shard.rs  trace.rs
crates/scripture/src/driver/: admission.rs  metrics.rs  mod.rs  policy.rs  receipt.rs  run_loop.rs  state.rs
crates/scripture/src/spool/: cell.rs  continuity.rs  frame.rs  mod.rs  progress.rs  recovery.rs  storage.rs
crates/scripture/tests/: canon.rs  chunk.rs  chunklog.rs  codec.rs  dataref_driver.rs  driver.rs  driver_hostile.proptest-regressions  driver_hostile.rs  driver_model.rs  gcs.rs  model.proptest-regressions  model.rs  r2.rs  s3.rs  serving_authority.rs  shard_reducer.rs  spool.rs  timer.rs  v0.rs
crates/scripture/tests/support/: mod.rs  scripted_log_drive.rs
crates/scriptured/: Cargo.toml
crates/scriptured/src/: fleet_exercise_config.rs  fleet_lab.rs  lib.rs  main.rs  object_store_lab.rs  raw_lines.rs
crates/scriptured/tests/: fleet_lab_r2_smoke.rs  remote_sequencer_http_lab.rs  remote_sequencer_lab.rs
docs/: cost-model.md  fleet-lab-two-process-drill.md  kernel-gap-report.md  phase-1-chunk-driver.md
references/: README.md
scripts/: README.md  render-provider-scribe-drill.sh  scribe-drill-preflight.sh  scripture_http.py  scripture_send.py  submission-check.sh
(+129 files in other folders)
