[workspace]
members = [
    "crates/protoscripture",
    "crates/scripture",
    "crates/scripture-service",
    "crates/scripture-runtime",
    "crates/scripture-cli",
    "crates/scripture-campaign",
]
resolver = "3"

[workspace.dependencies]
bytes = "1.12"
futures = "0.3"
# The release path resolves this exact, private Holylog RC from Kellnr.  It has
# no Git or path fallback: clean release builds must prove registry-only input.
holylog = { version = "=0.2.3-rc.1", registry = "fleet" }
holylog-correctness = { version = "=0.1.1-rc.1", registry = "fleet" }
holylog-object-store = { version = "=0.2.3-rc.1", registry = "fleet" }
holylog-object-store-register = { version = "=0.2.3-rc.1", registry = "fleet" }
object_store = { version = "0.14", default-features = false }
blake3 = { version = "1.5", default-features = false, features = ["std"] }
crc32c = "0.6"
proptest = "1.9"
thiserror = "2.0"
tokio = { version = "1.47", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
getrandom = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
