[workspace]
members = [
    "crates/protoscripture",
    "crates/scripture",
    "crates/scripture-service",
    "crates/scripture-runtime",
    "crates/scripture-cli",
    "crates/scripture-campaign",
    "crates/scripture-workload",
]
resolver = "3"

[workspace.dependencies]
bytes = "1.12"
futures = "0.3"
# Versions must match crates inside git tag v0.2.2 (holylog-correctness is 0.1.0).
# `registry = "fleet"` keeps cargo package off crates.io; local resolve still uses
# the git tag until Kellnr hosts the packages (see .cargo/config.toml.example).
holylog = { version = "0.2.2", registry = "fleet", git = "ssh://git@github.com/chicagobuss/holylog.git", tag = "v0.2.2" }
holylog-correctness = { version = "0.1.0", registry = "fleet", git = "ssh://git@github.com/chicagobuss/holylog.git", tag = "v0.2.2" }
holylog-remote-sequencer-http = { version = "0.2.2", registry = "fleet", git = "ssh://git@github.com/chicagobuss/holylog.git", tag = "v0.2.2" }
holylog-object-store = { version = "0.2.2", registry = "fleet", git = "ssh://git@github.com/chicagobuss/holylog.git", tag = "v0.2.2" }
holylog-object-store-register = { version = "0.2.2", registry = "fleet", git = "ssh://git@github.com/chicagobuss/holylog.git", tag = "v0.2.2" }
object_store = { version = "0.14", default-features = false }
blake3 = { version = "1.5", default-features = false, features = ["std"] }
crc32c = "0.6"
proptest = "1.9"
thiserror = "2.0"
tokio = { version = "1.47", default-features = false }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
getrandom = "0.3"
arrow = { version = "59.1.0", default-features = false, features = ["json"] }
parquet = { version = "59.1.0", default-features = false, features = ["arrow", "snap"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
