[package]
name = "scripture-campaign"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "Experimental Scripture correctness campaign tool"
license = "MIT"
publish = false

[[bin]]
name = "scripture-campaign"
path = "src/main.rs"
doc = false

[dependencies]
blake3.workspace = true
bytes.workspace = true
futures.workspace = true
getrandom.workspace = true
holylog.workspace = true
holylog-correctness.workspace = true
holylog-object-store = { workspace = true, features = ["s3"] }
holylog-object-store-register = { workspace = true, features = ["aws"] }
object_store = { workspace = true, default-features = false }
scripture = { path = "../scripture", version = "0.1.0-rc.1" }
scripture-runtime = { path = "../scripture-runtime", version = "0.1.0-rc.1" }
scripture-service = { path = "../scripture-service", version = "0.1.0-rc.1", features = ["virtuallog-test-support"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }

[lints]
workspace = true
