[package]
name = "scripture-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "Scripture process command (scripture serve)"
license = "MIT"
publish = false

[[bin]]
name = "scripture"
path = "src/main.rs"
# Avoid cargo-doc path collision with the `scripture` library crate.
doc = false

[[bin]]
name = "scripture-producer-wire-client"
path = "src/bin/producer_wire_client.rs"
doc = false

[features]
default = []
# Test-only Holylog fault/trace bridge for correctness-campaign actor images.
campaign-faults = ["dep:holylog-correctness", "scripture-service/virtuallog-test-support"]

[dependencies]
bytes.workspace = true
holylog.workspace = true
holylog-correctness = { workspace = true, optional = true }
holylog-object-store = { workspace = true, features = ["s3"] }
holylog-object-store-register = { workspace = true, features = ["aws"] }
object_store = { workspace = true, default-features = false }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
scripture = { path = "../scripture" }
scripture-runtime = { path = "../scripture-runtime" }
scripture-service = { path = "../scripture-service" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "signal", "sync", "time"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
