[package]
name = "scripture-runtime"
version = "0.1.0-rc.1"
edition = "2024"
rust-version = "1.97"
description = "Scripture product runtime composition (serve path)"
license = "MIT"
repository = "https://github.com/chicagobuss/scripture"
publish = ["fleet"]

[dependencies]
bytes.workspace = true
futures.workspace = true
getrandom.workspace = true
holylog.workspace = true
holylog-object-store = { workspace = true, features = ["s3"] }
holylog-object-store-register = { workspace = true, features = ["aws"] }
object_store = { workspace = true, default-features = false }
scripture = { path = "../scripture", version = "0.1.0-rc.1", registry = "fleet" }
scripture-service = { path = "../scripture-service", version = "0.1.0-rc.1", registry = "fleet" }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }

[dev-dependencies]
bytes.workspace = true
holylog-correctness.workspace = true
scripture-service = { path = "../scripture-service", version = "0.1.0-rc.1", registry = "fleet", features = ["virtuallog-test-support"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }

[lints]
workspace = true
