[package]
name = "scripture-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "Transport-neutral, single-writer service primitives for Scripture"
license = "MIT"
publish = false

[dependencies]
scripture = { path = "../scripture" }
holylog.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
bytes.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
