[package]
name = "scripture-service"
version = "0.1.0-rc.1"
edition = "2024"
rust-version = "1.97"
description = "Transport-neutral, single-writer service primitives for Scripture"
license = "MIT"
repository = "https://github.com/chicagobuss/scripture"
publish = ["fleet"]

[features]
virtuallog-test-support = []

[dependencies]
scripture = { path = "../scripture", version = "0.1.0-rc.1", registry = "fleet" }
holylog.workspace = true
thiserror.workspace = true
blake3.workspace = true
getrandom.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
futures.workspace = true

[dev-dependencies]
bytes.workspace = true
holylog-correctness.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
futures.workspace = true


[lints]
workspace = true
