[package]
name = "scripture-telemetry-producer"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "Experimental fleet telemetry producer: OpenMetrics scrape → OTel-shaped JSON → raw-lines"
license = "MIT"
publish = false

[dependencies]
blake3.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }

[[bin]]
name = "scripture-telemetry-producer"
path = "src/main.rs"

[[bin]]
name = "raw-lines-lab-sink"
path = "src/bin/raw_lines_lab_sink.rs"
doc = false

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
