[package]
name = "scripture-workload"
version = "0.1.0-rc.1"
edition = "2024"
rust-version = "1.97"
description = "Consumer Workload Contract and reference materializers for Scripture"
license = "MIT"
repository = "https://github.com/chicagobuss/scripture"
publish = false

[dependencies]
arrow.workspace = true
blake3.workspace = true
bytes.workspace = true
getrandom.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
