[package]
name = "scripture"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "A correctness-first durable journal system over holylog"
license = "MIT"
publish = false

[dependencies]
bytes.workspace = true
holylog.workspace = true
thiserror.workspace = true

[dev-dependencies]
futures.workspace = true
proptest.workspace = true

[lints]
workspace = true
