[package]
name = "scriptured"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "Lab-grade Scripture daemon transport adapters"
license = "MIT"
publish = false

[features]
default = []
remote-sequencer-lab = ["dep:holylog-remote-sequencer-tcp"]
fleet-lab = [
    "dep:holylog-object-store",
    "dep:holylog-object-store-register",
    "dep:object_store",
    "holylog-object-store/s3",
    "holylog-object-store-register/aws",
]

[dependencies]
bytes.workspace = true
holylog.workspace = true
holylog-remote-sequencer-tcp = { workspace = true, optional = true }
holylog-object-store = { workspace = true, optional = true }
holylog-object-store-register = { workspace = true, optional = true }
object_store = { workspace = true, optional = true, default-features = false }
scripture = { path = "../scripture" }
scripture-service = { path = "../scripture-service" }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync"] }

[dev-dependencies]
holylog-remote-sequencer-tcp.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }

[[bin]]
name = "fleet-lab-node"
path = "src/bin/fleet_lab_node.rs"
required-features = ["fleet-lab"]

[[test]]
name = "remote_sequencer_lab"
path = "tests/remote_sequencer_lab.rs"
required-features = ["remote-sequencer-lab"]

[lints]
workspace = true
