[package]
name = "scriptured"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "Lab-grade Scripture daemon transport adapters"
license = "MIT"
publish = false

[features]
default = []
remote-sequencer-http-lab = ["dep:holylog-remote-sequencer-http"]
fleet-lab = [
    "dep:holylog-object-store",
    "dep:holylog-object-store-register",
    "dep:object_store",
    "holylog-object-store/s3",
    "holylog-object-store-register/aws",
]
fleet-lab-r2-smoke = ["fleet-lab"]

[dependencies]
bytes.workspace = true
holylog.workspace = true
holylog-remote-sequencer-http = { workspace = true, optional = true }
holylog-object-store = { workspace = true, optional = true }
holylog-object-store-register = { workspace = true, optional = true }
object_store = { workspace = true, optional = true, default-features = false }
futures = { workspace = true }
scripture = { path = "../scripture" }
scripture-service = { path = "../scripture-service" }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "signal", "sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }

[[bin]]
name = "fleet-lab-node"
path = "src/bin/fleet_lab_node.rs"
required-features = ["fleet-lab"]

[[test]]
name = "remote_sequencer_http_lab"
path = "tests/remote_sequencer_http_lab.rs"
required-features = ["remote-sequencer-http-lab"]

[[test]]
name = "fleet_lab_r2_smoke"
path = "tests/fleet_lab_r2_smoke.rs"
required-features = ["fleet-lab-r2-smoke"]

[lints]
workspace = true
